--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <h2>Destaques</h2>
             <hr>
                 <div class="row justify-content-center ">
-                    <div class="col-lg-4 col-md-6 col-sm-12">
+                    <div class="col-lg-4 col-md-6 col-sm-12 artigo">
                         <div class="card">
                                 <img src="./imgs/Gottmik.jpeg" alt="Gottmik">
                                 <div class="card-body">
@@ -94,7 +94,7 @@
                                 </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12">
+                    <div class="col-lg-4 col-md-6 col-sm-12 artigo">
                         <div class="card">
                             <img src="./imgs/Sasha Velour.jpeg" alt="Sasha Velour">
                             <div class="card-body">
@@ -106,7 +106,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12">
+                    <div class="col-lg-4 col-md-6 col-sm-12 artigo">
                         <div class="card">
                             <img src="./imgs/maddy.jpeg" alt="Maddy Morphosis">
                             <div class="card-body">
@@ -118,7 +118,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12">
+                    <div class="col-lg-4 col-md-6 col-sm-12 artigo">
                         <div class="card">
                             <img src="./imgs/Trixie Mattel.jpeg" alt="Trixie Mattel">
                             <div class="card-body">
@@ -130,7 +130,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12">
+                    <div class="col-lg-4 col-md-6 col-sm-12 artigo">
                         <div class="card">
                             <img src="./imgs/Monet-X-Change.jpeg" alt="Monét X Change">
                             <div class="card-body">
@@ -142,7 +142,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12">
+                    <div class="col-lg-4 col-md-6 col-sm-12 artigo">
                         <div class="card">
                             <img src="./imgs/Raja.jpeg" alt="Raja">
                             <div class="card-body">
@@ -162,7 +162,7 @@
             <h2>As favoritas dos fãs</h2>
             <hr>
                 <div class="row">
-                    <div class="col-lg-4 col-md-6 col-sm-12">
+                    <div class="col-lg-4 col-md-6 col-sm-12 artigo">
                         <div class="card">
                             <img src="./imgs/Bianca Del Rio.jpeg" alt="Bianca Del Rio">
                             <div class="card-body">
@@ -174,7 +174,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12">
+                    <div class="col-lg-4 col-md-6 col-sm-12 artigo">
                         <div class="card">
                             <img src="./imgs/alasca.jpeg" alt="Alaska">
                             <div class="card-body">
@@ -186,7 +186,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12">
+                    <div class="col-lg-4 col-md-6 col-sm-12 artigo">
                         <div class="card">
                             <img src="./imgs/Vanessa Vanjie Mateo.jpeg" alt="Vanjie">
                             <div class="card-body">
@@ -198,7 +198,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12">
+                    <div class="col-lg-4 col-md-6 col-sm-12 artigo">
                         <div class="card">
                             <img src="./imgs/katya_.jpeg" alt="Katya">
                             <div class="card-body">
@@ -210,7 +210,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12">
+                    <div class="col-lg-4 col-md-6 col-sm-12 artigo">
                         <div class="card">
                             <img src="./imgs/Alyssa Edwards.jpeg" alt="Alyssa Edwards">
                             <div class="card-body">
@@ -222,7 +222,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12">
+                    <div class="col-lg-4 col-md-6 col-sm-12 artigo">
                         <div class="card">
                             <img src="./imgs/jinkx-moonson.jpeg" alt="Jinkx Moonson">
                             <div class="card-body">
