--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
     <div id="carrossel" class="carousel carousel-fade slide" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div data-bs-interval="300" class="carousel-item active">
-                <img class="d-block w-100" src="./imgs/Bianca-Del-Rio.webp" alt="Bianca Del Rio">
+                <img class="d-block w-100" src="./imgs/sasha colby.jpeg" alt="Sasha Colby">
                 <div class="carousel-caption">
-                    <h2>Bianca Del Rio</h2>
+                    <h2>Sasha Colby</h2>
                 </div>
             </div>
             <div data-bs-interval="3000" class="carousel-item">
